src/test/ui/rustdoc/check-doc-alias-attr-location.stderr
error: `#[doc(alias = "...")]` isn't allowed on extern block
  --> $DIR/check-doc-alias-attr-location.rs:9:7
   |
LL | #[doc(alias = "foo")]
   |       ^^^^^^^^^^^^^

error: `#[doc(alias = "...")]` isn't allowed on implementation block
  --> $DIR/check-doc-alias-attr-location.rs:12:7
   |
LL | #[doc(alias = "bar")]
   |       ^^^^^^^^^^^^^

error: `#[doc(alias = "...")]` isn't allowed on implementation block
  --> $DIR/check-doc-alias-attr-location.rs:18:7
   |
LL | #[doc(alias = "foobar")]
   |       ^^^^^^^^^^^^^^^^

error: `#[doc(alias = "...")]` isn't allowed on type alias in implementation block
  --> $DIR/check-doc-alias-attr-location.rs:20:11
   |
LL |     #[doc(alias = "assoc")]
   |           ^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

